finish staff picks function.
