# src/swagger/swagger_output.json
@@ -190,6 +190,29 @@
         }
       }
     },
+    "/api/article/staff-picks": {
+      "get": {
+        "tags": [
+          "Article"
+        ],
+        "summary": "Get staff picks for 3 articles",
+        "description": "Get staff picks description",
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/staffPicksGet200"
+            }
+          },
+          "500": {
+            "description": "Error",
+            "schema": {
+              "$ref": "#/definitions/error"
+            }
+          }
+        }
+      }
+    },
     "/api/test": {
       "get": {
         "tags": [
@@ -271,6 +294,14 @@
     },
     "/api/user": {
       "post": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      },
+      "put": {
         "description": "",
         "responses": {
           "default": {
@@ -887,6 +918,103 @@
         "password": {
           "type": "string",
           "example": "dummyPassword"
+        }
+      }
+    },
+    "staffPicksGet200": {
+      "type": "array",
+      "items": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "type": "number",
+            "example": 1
+          },
+          "msg": {
+            "type": "string",
+            "example": "null"
+          },
+          "data": {
+            "type": "object",
+            "properties": {
+              "_id": {
+                "type": "string",
+                "example": "65c1a9b4fba17f733db61663"
+              },
+              "title": {
+                "type": "string",
+                "example": "New Article"
+              },
+              "content": {
+                "type": "string",
+                "example": "This is a new article."
+              },
+              "author": {
+                "type": "string",
+                "example": "Author Name"
+              },
+              "createdDate": {
+                "type": "string",
+                "example": "2022-01-01T00:00:00.000Z"
+              },
+              "publishedDate": {
+                "type": "string",
+                "example": "2022-01-01T00:00:00.000Z"
+              },
+              "updatedDate": {
+                "type": "string",
+                "example": "2022-01-01T00:00:00.000Z"
+              },
+              "tag": {
+                "type": "string",
+                "example": "Tag"
+              },
+              "like": {
+                "type": "number",
+                "example": 0
+              },
+              "views": {
+                "type": "number",
+                "example": 0
+              },
+              "summary": {
+                "type": "string",
+                "example": "Summary"
+              },
+              "status": {
+                "type": "string",
+                "example": "Status"
+              },
+              "comments": {
+                "type": "array",
+                "items": {
+                  "type": "object",
+                  "properties": {
+                    "username": {
+                      "type": "string",
+                      "example": "Commenter"
+                    },
+                    "content": {
+                      "type": "string",
+                      "example": "This is a comment."
+                    },
+                    "createdDate": {
+                      "type": "string",
+                      "example": "2022-01-01T00:00:00.000Z"
+                    },
+                    "_id": {
+                      "type": "string",
+                      "example": "65c1a9b4fba17f733db61664"
+                    }
+                  }
+                }
+              },
+              "__v": {
+                "type": "number",
+                "example": 0
+              }
+            }
+          }
         }
       }
     }
